# opencraft

./: CONTRIBUTORS  DESIGN  README.md  buildall.sh
apiserver/: DESIGN
apiserver/opencraftweb/: manage.py
apiserver/opencraftweb/opencraft/: apps.py  models.py  urls.py  views.py
apiserver/opencraftweb/opencraft/templates/opencraftweb/: index.html
apiserver/opencraftweb/opencraftweb/: settings.py  urls.py  views.py  wsgi.py
common/: CMakeLists.txt  DESIGN  genversion.sh
common/appfw_examples/: appfw_appvars.cpp  appfw_config.cpp  appfw_shell.cpp  appfw_simple.cpp
common/include/opencraft/: common.h  init_common.h  nuklear_gui.h  version.h
common/include/opencraft/appfw/: appfw.h
common/include/opencraft/appfw/appstate/appvars/: base_appvars.h
common/include/opencraft/appfw/appstate/fsm/: base_fsm.h  base_state.h  end_program_state.h  idle_state.h
common/include/opencraft/appfw/configuration/: config_manager.h
common/include/opencraft/appfw/console/: base_console.h  console_event_listener.h
common/include/opencraft/appfw/console/cmdshell/: base_shell.h
common/include/opencraft/appfw/console/logging/: base_logger.h  simple_logger.h
common/include/opencraft/appfw/interfaces/: base_interface.h
common/include/opencraft/appfw/interfaces/cli/: base_cli.h  simple_cli.h
common/src/: init_common.cpp  nuklear_gui.cpp  version.cpp
common/src/appfw/: appfw.cpp  base_appvars.cpp  base_cli.cpp  base_console.cpp  base_fsm.cpp  base_interface.cpp  base_logger.cpp  base_shell.cpp  base_state.cpp  config_manager.cpp  end_program_state.cpp  idle_state.cpp
common/tests/: nuklear_test.cpp
launcher/: CMakeLists.txt  DESIGN  DESIGN2
launcher/cpr/: CMakeLists.txt
launcher/include/: common.h  nuklear_cpp.h  plugin_api.h
launcher/plugins/dummy/: dummy_plugin.c  dummy_plugin.cpp
launcher/plugins/dummy_client/: dummy_client.cpp
launcher/plugins/mojang_client/: mojang_client.cpp
launcher/src/: main.cpp  nuklear.cpp
libopencraft/: CMakeLists.txt  DESIGN  README.md  autogen.py  autogen.sh  genversion.sh
libopencraft/examples/: chat_client.cpp  ping_server.cpp  ping_server_basic_client.cpp  spawn_player.cpp
libopencraft/include/: base_packet.h  common.h  packet_stream.h  proto_constants.h  raw_packet.h
libopencraft/include/libopencraft/: base_packet.h  basic_client.h  common.h  packet_reader.h  packet_stream.h  packet_writer.h  proto_constants.h  spawning_client.h
libopencraft/src/: base_packet.cpp  basic_client.cpp  packet_reader.cpp  packet_stream.cpp  packet_writer.cpp  raw_packet.cpp  spawning_client.cpp
libopencraft/test_client/: bg_client.cpp  bg_client.h
libopencraft/test_data/: README.md  handshake.packet.h  mc_login.bin.h
libopencraft/test_src/: main.cpp
libopencraft/test_src/packet_reader/: main.cpp
newsim/: CMakeLists.txt  DESIGN  README  autogen.sh
newsim/include/: client_connection.h  common.h  logging.h  opencraft_daemon.h  opencraft_entity_data.h  opencraft_event_dispatcher.h  opencraft_game_state.h  opencraft_player_data.h  python_events.h  python_logging.h  python_server.h
newsim/python/: event_dispatcher.py  event_types.py  gen_events_header.py  mcproxy.py  opencraft_server.py  python_server.py  static_chunk_data.py
newsim/src/: client_connection.cpp  main.cpp  opencraft_daemon.cpp  opencraft_event_dispatcher.cpp  opencraft_game_state.cpp  opencraft_player_data.cpp  python_events.cpp  python_logging.cpp  python_server.cpp
newview/: 1.11.json  CMakeLists.txt  DESIGN  autogen.sh  genversion.sh
newview.old/: DESIGN  gen_load_blocks.py
newview.old/include/: common.h  loadblocks.inc  opencraft_appstate_joingame.h  opencraft_appstate_menu.h  opencraft_cvars.h
newview.old/soil/: SOIL.c
newview.old/src/: main.cpp  opencraft_appstate_joingame.cpp
newview.old/texture_packs/osrep/: pack.mcmeta
newview/include/: common.h  opencraft_appstate.h  opencraft_appstate_ingame.h  opencraft_appstate_joingame.h  opencraft_appstate_menu.h  opencraft_connection.h  opencraft_console.h  opencraft_console_cmds.h  opencraft_video.h  r_2d.h
newview/oglconsole/: Makefile  oglconsole.c  oglconsole.h  optimal-space.py
newview/oglconsole/examples/GLUT/: Makefile  example.c
newview/oglconsole/examples/SDL/: Makefile  example.c
newview/src/: main.cpp  opencraft_appstate_ingame.cpp  opencraft_appstate_joingame.cpp  opencraft_appstate_menu.cpp  opencraft_connection.cpp  opencraft_console.cpp  opencraft_console_cmds.cpp  opencraft_cvars.cpp  opencraft_video.cpp  r_2d.cpp
newview/texture_packs/osrep/assets/opencraft/textures/blocks/: Thumbs.db
oldcrap/launcher/: CMakeLists.txt  DESIGN2  autogen.sh
oldcrap/launcher/include/: common.h
oldcrap/launcher/src/: nuklear.cpp  plugin_api.cpp
oldcrap/newview/: CMakeLists.txt
oldcrap/newview.old/: CMakeLists.txt
oldcrap/newview.old/fonts/: LICENSE
oldcrap/newview.old/include/: opencraft_console.h  opencraft_video.h  r_2d.h
oldcrap/newview.old/oglconsole/: oglconsole.c  two-toner.c
oldcrap/newview.old/src/: opencraft_console_cmds.cpp  opencraft_video.cpp  r_2d.cpp
oldcrap/newview.old/texture_packs/osrep/credits/: Thumbs.db
oldcrap/opencraftd/include/: client_connection.h  user_profile.h
oldcrap/opencraftd/src/: main.cpp  opencraft_daemon.cpp  user_profile.cpp
opencraft/: base_daemon.py  opencraftd.py  smpmap.py
opencraftd/: CMakeLists.txt  autogen_packets.py  bbuff.cpp  do_autogen.sh  genversion.sh  license_header  main.cpp  opencraft_client_connection.cpp  opencraft_server.cpp  packet_handlers.cpp  utils.cpp
opencraftd/include/: bbuff.h  common.h  logging.h  opencraft_client_connection.h  opencraft_daemon.h  opencraft_server.h  packet_handlers.h  packets.autogen.h  utils.h
opencraftd/src/: client_connection.cpp  logging.cpp  main.cpp  opencraft_daemon.cpp
protocol/: CMakeLists.txt  DESIGN  autogen.py  autogen.sh
protocol/examples/: chat_client.cpp  ping_server.cpp
protocol/include/libopencraft/: packet_reader.h  raw_packet.h
protocol/src/: base_packet.cpp
protocol/test_client/: main.cpp
protocol/test_data/: handshake.packet
(+8 files in other folders)
