cmake_minimum_required(VERSION 2.8.3)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

cmake_policy(SET CMP0004 OLD)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/CMakeFiles")

FIND_PACKAGE(Boost COMPONENTS system program_options thread log log_setup)
find_package(jsoncpp REQUIRED)
find_package(SDL2 REQUIRED)
find_package(CURL REQUIRED)
INCLUDE(FindPkgConfig)

set (CMAKE_CXX_STANDARD 11)

include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-narrowing")

add_subdirectory(cpr)

ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${JSONCPP_INCLUDE_DIRS} ${CPR_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/include )

FILE(GLOB launcher_src     ${CMAKE_SOURCE_DIR}/src/*.cpp)

ADD_EXECUTABLE(launcher ${soil_src} ${oglconsole_src} ${launcher_src})

if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
   set(EXTRA_GL GL GLEW GLU)
endif()


TARGET_LINK_LIBRARIES(launcher dl ${CURL_LIBRARIES}  ${CPR_LIBRARIES} ${JSONCPP_LIBRARIES} ${EXTRA_GL} ${SDL2_LIBRARIES} pthread ${Boost_LIBRARIES})

ADD_CUSTOM_COMMAND( OUTPUT ${CMAKE_SOURCE_DIR}/include/version.h
                    COMMAND ${CMAKE_SOURCE_DIR}/autogen.sh
                    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
                    COMMENT "Creating autogenerated headers" )

add_custom_target(autogen_headers
                  DEPENDS ${CMAKE_SOURCE_DIR}/include/version.h)

ADD_LIBRARY(dummy_client_plugin SHARED ${CMAKE_SOURCE_DIR}/plugins/dummy_client/dummy_client.cpp)
set_target_properties(dummy_client_plugin PROPERTIES PREFIX ""
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/plugins")

ADD_LIBRARY(mojang_client_plugin SHARED ${CMAKE_SOURCE_DIR}/plugins/mojang_client/mojang_client.cpp)
set_target_properties(mojang_client_plugin PROPERTIES PREFIX ""
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/plugins")

ADD_LIBRARY(dummy_server_plugin SHARED ${CMAKE_SOURCE_DIR}/plugins/dummy_server/dummy_server.cpp)
set_target_properties(dummy_server_plugin PROPERTIES PREFIX ""
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/plugins")

add_dependencies(dummy_server_plugin autogen_headers)
add_dependencies(dummy_client_plugin autogen_headers)
add_dependencies(launcher autogen_headers)

